--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@ Utils/Stats_Analysis/
 # Ignore supplemental figures
 Supplemental Figures/
 
-
-
-
-
+# Ignore caches
+Utils/models/__pycache__/
+Utils/__pycache__/
+__pycache__/
